[package]
name = "puzz-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core types and traits for puzz."
repository = "https://github.com/chen-dk/puzz"
keywords = ["http", "web", "async", "puzz"]
categories = ["network-programming", "web-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puzz-http = { path = "../puzz-http", version = "0.1.0" }
puzz-service = { path = "../puzz-service", version = "0.1.0", features = [
    "util",
] }

mime = "0.3"
