[package]
name = "puzz"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple and powerful web framework."
repository = "https://github.com/chen-dk/puzz"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "server"]
categories = [
    "network-programming",
    "web-programming::http-server",
    "asynchronous",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puzz-core = { path = "../puzz-core", version = "0.1.0" }
puzz-route = { path = "../puzz-route", version = "0.1.0" }
puzz-middleware = { path = "../puzz-middleware", version = "0.1.0", features = [
    "core",
] }
puzz-multipart = { path = "../puzz-multipart", version = "0.1.0", optional = true }
puzz-server = { path = "../puzz-server", version = "0.1.0", optional = true }
puzz-sse = { path = "../puzz-sse", version = "0.1.0", optional = true }

mime = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

[features]
default = ["server"]
multipart = ["puzz-multipart"]
server = ["puzz-server"]
sse = ["puzz-sse"]
