[package]
name = "multipart-form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puzz = { path = "../../puzz", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
